Create header file

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,3 +1,4 @@
 project('hd98', 'c')
-library('hd98', 'hd98.c')
-executable('hd98', 'hd98.c')
+math = meson.get_compiler('c').find_library('m', required : false)
+
+libhd98 = library('hd98', ['hd98.c', 'hd98.h'], dependencies: math)
