--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,12 @@ project(hd98 C)
 
 set(CMAKE_C_STANDARD 11)
 
+find_library(MATH_LIBRARY m)
+
 add_library(hd98 SHARED src/hd98.c src/hd98.h)
-target_link_libraries(hd98 m)
+if (MATH_LIBRARY)
+  target_link_libraries(hd98 ${MATH_LIBRARY})
+endif()
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(deps REQUIRED IMPORTED_TARGET glib-2.0)
