--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,12 @@ set(CMAKE_C_STANDARD 11)
 
 find_library(MATH_LIBRARY m)
 
-add_library(hd98 SHARED src/hd98.c src/hd98.h)
+add_library(hd98 SHARED src/hd98.c include/hd98/hd98.h)
+target_include_directories(hd98 PUBLIC include)
 if (MATH_LIBRARY)
   target_link_libraries(hd98 ${MATH_LIBRARY})
 endif()
+
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(deps REQUIRED IMPORTED_TARGET glib-2.0)
