--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 project(hd98 C)
 
 set(CMAKE_C_STANDARD 11)
+include(CTest)
 
 find_library(MATH_LIBRARY m)
 
@@ -11,10 +12,4 @@ if (MATH_LIBRARY)
   target_link_libraries(hd98 ${MATH_LIBRARY})
 endif()
 
-
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(deps REQUIRED IMPORTED_TARGET glib-2.0)
-
-add_executable(test_hd98 src/test_hd98.c)
-target_link_libraries(test_hd98 PRIVATE PkgConfig::deps)
-target_link_libraries(test_hd98 PRIVATE hd98)
+add_subdirectory(tests)
