Move code related to HalmDragon1998 material to separate files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,11 @@ find_library(MATH_LIBRARY m)
 
 add_library(hd98 SHARED
   hd98.c
-  hooke.c
   ../include/hd98/hd98.h
-  ../include/hd98/hooke.h)
+  hooke.c
+  ../include/hd98/hooke.h
+  halm_dragon_1998.c
+  ../include/hd98/halm_dragon_1998.h)
 
 target_include_directories(hd98 PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}../include>
