--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,11 +11,9 @@ if (MATH_LIBRARY)
     target_link_libraries(test_hd98 ${MATH_LIBRARY})
 endif ()
 
+target_link_libraries(test_hd98 PRIVATE hd98)
+
 #find_package(Catch2 REQUIRED)
 #target_link_libraries(test_hd98 PRIVATE hd98 Catch2::Catch2)
-
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(deps REQUIRED IMPORTED_TARGET glib-2.0)
-target_link_libraries(test_hd98 PRIVATE hd98 PkgConfig::deps)
 
 add_test(NAME test_hd98 COMMAND test_hd98)
