--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,39 +1,38 @@
 add_compile_definitions(PROJECT_VERSION_QUOTED=\"${METADATA_VERSION}\")
 add_compile_definitions(PROJECT_AUTHOR_QUOTED=\"${METADATA_AUTHOR}\")
-add_compile_definitions(_USE_MATH_DEFINES)
 
 add_library(
-  ${PROJECT_NAME} SHARED
-        hd98.cpp)
+        ${PROJECT_NAME} SHARED
+        hd98.cpp hooke.cpp halm_dragon_1998.cpp)
 
 target_include_directories(
-  ${PROJECT_NAME} PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-  $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
+        ${PROJECT_NAME} PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+        $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>
+        $<INSTALL_INTERFACE:include>)
 
 find_library(MATH_LIBRARY m)
 if (MATH_LIBRARY)
-  target_link_libraries(${PROJECT_NAME} ${MATH_LIBRARY})
-endif()
+    target_link_libraries(${PROJECT_NAME} ${MATH_LIBRARY})
+endif ()
 
 install(
-  TARGETS ${PROJECT_NAME}
-  DESTINATION lib
-  EXPORT ${PROJECT_NAME}_targets)
+        TARGETS ${PROJECT_NAME}
+        DESTINATION lib
+        EXPORT ${PROJECT_NAME}_targets)
 
 install(
-  EXPORT ${PROJECT_NAME}_targets
-  FILE ${PROJECT_NAME}-targets.cmake
-  DESTINATION lib/cmake/${PROJECT_NAME})
+        EXPORT ${PROJECT_NAME}_targets
+        FILE ${PROJECT_NAME}-targets.cmake
+        DESTINATION lib/cmake/${PROJECT_NAME})
 
 include(CMakePackageConfigHelpers)
 
 configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/config.cmake.in
-  "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake"
-  INSTALL_DESTINATION "lib/cmake/${PROJECT_NAME}"
-  NO_SET_AND_CHECK_MACRO
-  NO_CHECK_REQUIRED_COMPONENTS_MACRO)
+        "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake"
+        INSTALL_DESTINATION "lib/cmake/${PROJECT_NAME}"
+        NO_SET_AND_CHECK_MACRO
+        NO_CHECK_REQUIRED_COMPONENTS_MACRO)
 
 # write_basic_package_version_file(
 #   "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake"
@@ -42,5 +41,5 @@ configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/config.cmake.in
 # )
 
 install(FILES
-  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
-  DESTINATION lib/cmake/${PROJECT_NAME})
+        ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
+        DESTINATION lib/cmake/${PROJECT_NAME})
