--- a/example/CMakelists.txt
+++ b/example/CMakelists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.13)
 
-project("example_hd98")
+project(example_hd98
+        LANGUAGES CXX)
+
+set(CMAKE_CXX_STANDARD 20)
 
 find_package(hd98 CONFIG REQUIRED)
 
